Implement configuration and stability improvements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,2 @@
-asttokens
-attrs
-backcall
-beautifulsoup4
-bleach
-certifi
-charset-normalizer
-decorator
-defusedxml
-docopt
-executing
-fastjsonschema
-idna
-ipython
-jedi
-Jinja2
-jsonschema
-jsonschema-specifications
-jupyter_client
-jupyter_core
-jupyterlab_pygments
-MarkupSafe
-matplotlib-inline
-mistune
-nbclient
-nbconvert
-nbformat
-packaging
-pandocfilters
-parso
-pexpect
-pickleshare
-pipreqs
-platformdirs
-prompt_toolkit
-ptyprocess
-pure_eval
-Pygments
-python-dateutil
-pyzmq
-referencing
-requests
-rpds-py
-six
-soupsieve
-stack-data
-tinycss2
-tornado
-traitlets
-urllib3
-wcwidth
-webencodings
-yarg
-discord
-PyNaCl
+discord.py>=2.3,<3
+PyNaCl>=1.5,<2
