--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ INVITE_CODE_FOR_BOT_BOOSTER=Q9EesfD7Gs
 ROLE_BOT_BOOSTER=Бот Бустер
 ROLE_SERVER_BOOSTER=Server Booster
 ROLE_MOVIES=Кино
+MODERATOR_ROLE=
 GOOGLE_SHEET_URL=https://docs.google.com/spreadsheets/d/1JjNffnZHc-D8KdnLAdT09LTvoBJUVtX4ao9Wc-NM_6A
 DB_USER=
 DB_PASSWORD=
